// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Chord Progression test suite should generate chords based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 960,
    "time": 0,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 480,
    "time": 960,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 960,
    "time": 1440,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 480,
    "time": 2400,
  },
  Object {
    "chord": Array [
      64,
      68,
      73,
    ],
    "chordName": "C#m",
    "dur": 960,
    "time": 2880,
  },
  Object {
    "chord": Array [
      64,
      66,
      69,
      73,
    ],
    "chordName": "F#m7",
    "dur": 480,
    "time": 3840,
  },
  Object {
    "chord": Array [
      64,
      66,
      69,
      73,
    ],
    "chordName": "F#m7",
    "dur": 960,
    "time": 4320,
  },
  Object {
    "chord": Array [
      69,
      79,
      83,
      86,
      76,
      72,
    ],
    "chordName": "Am11",
    "dur": 640,
    "time": 5280,
  },
  Object {
    "chord": Array [
      69,
      79,
      83,
      86,
      76,
      72,
    ],
    "chordName": "Am11",
    "dur": 320,
    "time": 5920,
  },
  Object {
    "chord": Array [
      69,
      79,
      83,
      86,
      76,
      72,
    ],
    "chordName": "Am11",
    "dur": 480,
    "time": 6240,
  },
  Object {
    "chord": Array [
      69,
      76,
      86,
    ],
    "chordName": "Dsus2",
    "dur": 480,
    "time": 6720,
  },
  Object {
    "chord": Array [
      69,
      76,
      86,
    ],
    "chordName": "Dsus2",
    "dur": 480,
    "time": 7200,
  },
]
`;

exports[`A Chord Progression test suite should generate chords based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 240,
    "time": 0,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 240,
    "time": 240,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 240,
    "time": 0,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 720,
    "time": 720,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 320,
    "time": 1440,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 480,
    "time": 1760,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 320,
    "time": 1440,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 320,
    "time": 2560,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      71,
    ],
    "chordName": "C#m7",
    "dur": 240,
    "time": 2880,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      71,
    ],
    "chordName": "C#m7",
    "dur": 240,
    "time": 3120,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "time": 2880,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      76,
    ],
    "chordName": "F#m7",
    "dur": 320,
    "time": 3840,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      76,
    ],
    "chordName": "F#m7",
    "dur": 480,
    "time": 4160,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      76,
    ],
    "chordName": "F#m7",
    "dur": 320,
    "time": 4640,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 320,
    "time": 3840,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 320,
    "time": 5280,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 480,
    "time": 5600,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 480,
    "time": 6080,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 160,
    "time": 6560,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 240,
    "time": 6720,
  },
  Object {
    "chord": Array [
      62,
      67,
      69,
    ],
    "chordName": "Dsus4",
    "dur": 240,
    "time": 6960,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "time": 6720,
  },
]
`;

exports[`A Chord Progression test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "chord": Array [
      53,
      56,
      60,
      61,
      65,
      68,
      72,
      73,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "time": 0,
  },
  Object {
    "chord": Array [
      53,
      56,
      60,
      61,
      65,
      68,
      72,
      73,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "time": 320,
  },
  Object {
    "chord": Array [
      53,
      56,
      60,
      61,
      65,
      68,
      72,
      73,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "time": 640,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      63,
    ],
    "chordName": "Gb6",
    "dur": 320,
    "time": 960,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      63,
    ],
    "chordName": "Gb6",
    "dur": 320,
    "time": 1280,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      63,
    ],
    "chordName": "Gb6",
    "dur": 320,
    "time": 1600,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      65,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "time": 1920,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      65,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "time": 2240,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      65,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "time": 2560,
  },
  Object {
    "chord": Array [
      53,
      58,
      61,
      68,
    ],
    "chordName": "Db6",
    "dur": 320,
    "time": 2880,
  },
  Object {
    "chord": Array [
      53,
      58,
      61,
      68,
    ],
    "chordName": "Db6",
    "dur": 320,
    "time": 3200,
  },
  Object {
    "chord": Array [
      53,
      58,
      61,
      68,
    ],
    "chordName": "Db6",
    "dur": 320,
    "time": 3520,
  },
  Object {
    "chord": Array [
      53,
      60,
      65,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "time": 3840,
  },
  Object {
    "chord": Array [
      53,
      60,
      65,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "time": 4160,
  },
  Object {
    "chord": Array [
      53,
      60,
      65,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "time": 4480,
  },
  Object {
    "chord": Array [
      53,
      61,
      66,
      70,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "time": 4800,
  },
  Object {
    "chord": Array [
      53,
      61,
      66,
      70,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "time": 5120,
  },
  Object {
    "chord": Array [
      53,
      61,
      66,
      70,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "time": 5440,
  },
  Object {
    "chord": Array [
      54,
      63,
      70,
      71,
    ],
    "chordName": "Ebm6m",
    "dur": 480,
    "time": 5760,
  },
  Object {
    "chord": Array [
      54,
      63,
      70,
      71,
    ],
    "chordName": "Ebm6m",
    "dur": 480,
    "time": 6240,
  },
  Object {
    "chord": Array [
      52,
      61,
      68,
      69,
    ],
    "chordName": "Dbm6m",
    "dur": 320,
    "time": 6720,
  },
  Object {
    "chord": Array [
      52,
      61,
      68,
      69,
    ],
    "chordName": "Dbm6m",
    "dur": 320,
    "time": 7040,
  },
  Object {
    "chord": Array [
      52,
      61,
      68,
      69,
    ],
    "chordName": "Dbm6m",
    "dur": 320,
    "time": 7360,
  },
]
`;
